--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ function handleDragOver(evt) {
 	  <input type="file" id="import_f" value="data.json">
 	  <input type="button" id="import" value="Import Data" onclick="loadJson()">
 	  <input type="button" id="export" value="Export Data" onclick="jsonformater.outputJs()">
-	  <input type="button" id="kr" value="view Kr"  onclick="gGraph.setState('kr_view')">
-	  <input type="button" id="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
+	  <input type="button" id="kr" value="view KR"  onclick="gGraph.setState('kr_view')">
+	  <input type="button" id="edit" value="Edit KR" onclick="gGraph.setState('kr_edit')">
 	  <input type="button" id="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
 	  <input type="button" id="update" value="Update" onclick="gGraph.save()">
 	  <input type="button" id="lcg" value="LCG" onclick="gGraph.setState('lcg_view')">
