--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ function handleDragOver(evt) {
 <div id="main-container">
       <div id="menu">
 	<Form id="menu_f">
-	  <input type="file" id="import_f" value="data.json" class="removable_tab">
+	  <input type="file" id="import_f" value="data.json" class="removable_tab" multiple>
 	  <input type="button" id="import" value="Import Data" onclick="loadJson()" class="removable_tab">
 	  <input type="button" id="export" value="Export Data" onclick="jsonformater.outputJs()">
 	  <input type="button" id="kr" value="view KR"  onclick="gGraph.setState('kr_view')" class="tab_el">
