--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <link rel="stylesheet" type="text/css" href="kr.css">
 <script src="d3/d3.js"></script>
 <script src="d3/d3-context-menu.js"></script>
+<script src="Tools.js"></script>
+<script src="LGNode.js"></script>
+<script src="LGEdge.js"></script>
+<script src="LGUndoRedo.js"></script>
+<script src="LayerGraph.js"></script>
+<script src="KamiNugget.js"></script>
 <script src="Kami.js"></script>
 <script src="KamiGui.js"></script>
 <script>
