--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="Tools.js"></script>
 <script src="LGNode.js"></script>
 <script src="LGEdge.js"></script>
+<script src="Relation.js"></script>
 <script src="LGUndoRedo.js"></script>
 <script src="LayerGraph.js"></script>
 <script src="KamiNugget.js"></script>
