updating kami for generic graphs
node : update structure
layergraph : update hashtable (optimisation)
kami nugget : changed to feet the new apporach
kami : WiP

--- a/index.html
+++ b/index.html
@@ -23,9 +23,25 @@
     var kami;
     window.onload = function () {
         kami = new Kami();
-		kGui = new KamiGui(kami);
-		console.log("Kami initialized :)");
-		kGui.init();
+		kami.init();
+		kami.addNugget("my nugget","balbla bla");
+		console.log("===============");
+		console.log(kami.getNugget("g_1").getGraph().addNode("bla",["ag1"]));//agent ag1 : n_0
+		console.log("===============");
+		console.log(kami.getNugget("g_1").getGraph().addNode("bla",["ag2"]));//agent ag2 : n_1
+		console.log("===============");
+		console.log(kami.getNugget("g_1").getGraph().addNode("bli",["n2"]));//region reg1 : n_2
+		console.log("===============");
+		console.log(kami.getNugget("g_1").getGraph().addEdge("bla","n_0","n_2"));//reg1 of ag1
+		console.log("===============");
+		kami.log();
+		kami.rmNugget("g_1");
+		console.log("================");
+		console.log("=**************=");
+		console.log("=**************=");
+		console.log("=**************=");
+		console.log("================");
+		kami.log();
 		/*console.log(kami.addNugget("my nugget","ag1 binds and break rule with ag2 on region reg1 of ag1"));
 		console.log("===============");
 		console.log(kami.addNode(["component","agent"],"ng_0",["ag1"],null,"u_0"));//agent ag1 : n_0
