bug correction+type verification

--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
     var kami;
     window.onload = function () {
         kami = new Kami();
-		kami.init();
+		//kami.init();
+		kami.log();
+		console.log("================");
+		console.log("=**************=");
+		console.log("=**************=");
+		console.log("=**************=");
+		console.log("================");
 		kami.addNugget("my nugget","balbla bla");
 		console.log("===============");
-		console.log(kami.getNugget("g_1").getGraph().addNode("bla",["ag1"]));//agent ag1 : n_0
+		console.log(kami.addNode("g_1","n_0",["ag1"]));//agent ag1 : n_0
 		console.log("===============");
-		console.log(kami.getNugget("g_1").getGraph().addNode("bla",["ag2"]));//agent ag2 : n_1
+		console.log(kami.addNode("g_1","n_0",["ag2"]));//agent ag2 : n_1
 		console.log("===============");
-		console.log(kami.getNugget("g_1").getGraph().addNode("bli",["n2"]));//region reg1 : n_2
+		console.log(kami.addNode("g_1","n_1",["ag2"]));//region reg1 : n_2
 		console.log("===============");
-		console.log(kami.getNugget("g_1").getGraph().addEdge("bla","n_0","n_2"));//reg1 of ag1
+		console.log(kami.addEdge("g_1","e_0","n_0","n_2"));//reg1 of ag1
 		console.log("===============");
 		kami.log();
 		kami.rmNugget("g_1");
