--- a/index.html
+++ b/index.html
@@ -8,115 +8,10 @@
 <meta name="author" content="Adrien Basso-Blandin">
 <meta http-equiv="Cache-Control" content="no-store" />
 <link rel="stylesheet" type="text/css" href="kr.css">
-<script src="d3/d3.min.js"></script>
-<script src="d3/d3-context-menu.js"></script>
-<script src="LayeredGraph.js"></script>
-<script src="DynamicGraph.js"></script>
-<script src="GraphicGraph.js"></script>
-<script src="jSonFormatter.js"></script>
-<script>
-var gGraph = null; 
-var jsonformater= null;
-window.onload = function () { 
-	var dropZone = document.getElementById('graph');
-    dropZone.addEventListener('dragover', handleDragOver, false);
-    dropZone.addEventListener('drop', handleFileSelect, false);
-	gGraph = new GraphicGraph('graph');
-	gGraph.init();
-	jsonformater=new jSonFormatter(gGraph);
-	/*gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
-	gGraph.addNode(["region"],["reg1"],["n0"]);
-	gGraph.addNode(["region"],["reg2"],["n0"]);
-	gGraph.addNode(["action","bnd"],["bnd1"],[]);
-	gGraph.addNode(["action","bnd"],["bnd2"],[]);
-	gGraph.addNode(["action","binder","left"],[],["n3"]);
-	gGraph.addNode(["action","binder","right"],[],["n3"]);
-	gGraph.addNode(["action","binder","left"],[],["n4"]);
-	gGraph.addNode(["action","binder","right"],[],["n4"]);
-	gGraph.addEdge("n1","n5");
-	gGraph.addEdge("n1","n6");
-	gGraph.addEdge("n2","n7");
-	gGraph.addEdge("n2","n8");
-	gGraph.addCtx("n3",["n1"]);
-	gGraph.addCtx("n4",["n2","n3"]);*/
-	//gGraph.wakeUp();
-	//gGraph.mergeNode("n0","n1");
-	//console.log(gGraph.findByName(["brk1"],["action","bnd"],[]));
-	
-};
-
-var loadJson = function(){
-	var data=null; 
-	var file=document.getElementById("import_f").files;
-	if(typeof(file)!="undefined" && file !=null && file.length>0){
-		for(var i=0;i<file.length;i++)
-			loadFile(file[i]);
-	} 
-	else alert("No input file. Default datas loaded !");
-}
-var loadFile = function(data){
-	var yep=true;
-	if(gGraph==null || !confirm('Merge with the existing graph ?')){
-		if(gGraph!=null)
-			yep=confirm("confirm the removal of the old graph ?");
-		if(yep){
-			d3.select("#graph").selectAll("*").remove();
-			delete(gGraph);
-			gGraph = new GraphicGraph('graph');
-			gGraph.init();	
-			jsonformater=new jSonFormatter(gGraph);
-		}else return;
-	}if(yep){
-		if(jsonformater==null)
-			jsonformater=new jSonFormatter(gGraph);
-		console.log("importing datas");
-		if(data!=null){
-			var ka = new FileReader();
-			ka.readAsDataURL(data);
-			ka.onloadend = function(e){
-				jsonformater.init(e.target.result);
-			}
-		}else jsonformater.init("data.json");
-	}
-};
-
-var handleFileSelect = function(evt) {
-	evt.stopPropagation();
-	evt.preventDefault();
-    var files = evt.dataTransfer.files;
-	loadFile(files[0]);
-};
-function handleDragOver(evt) {
-    evt.stopPropagation();
-    evt.preventDefault();
-    evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
-};
-    
-
-
-
-</script>
+<script data-main="main" src="require.js">Main();</script>
  
 
 </head> 
 <body>
-<div id="main-container">
-      <div id="menu">
-	<Form id="menu_f">
-	  <input type="file" id="import_f" value="data.json" class="removable_tab" multiple>
-	  <input type="button" id="import" value="Import Data" onclick="loadJson()" class="removable_tab">
-	  <input type="button" id="export" value="Export Data" onclick="jsonformater.outputJs()">
-	  <input type="button" id="kr" value="view KR"  onclick="gGraph.setState('kr_view')" class="tab_el">
-	  <input type="button" id="edit" value="Edit KR" onclick="gGraph.setState('kr_edit')" class="tab_el">
-	  <input type="button" id="lcg" value="LCG" onclick="gGraph.setState('lcg_view')" class="tab_el">
-	  <input type="button" id="kappa" value="To Kappa" onclick="gGraph.setState('kappa_view')" class="removable_tab">
-	  <input type="button" id="replay" value="Reset Graph position" onclick="gGraph.wakeUp()">
-	</form>
-      </div>
-	  <div id="bottom_top_chart">
-	  </div>
-      <div id="graph">
-      </div>
-    </div>
 </body>
 </html>
