trying Node modules

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="Adrien Basso-Blandin">
 <meta http-equiv="Cache-Control" content="no-store" />
 <link rel="stylesheet" type="text/css" href="kr.css">
-<script data-main="main" src="require.js">Main();</script>
+<script data-main="myMain" src="require.js">myMain();</script>
  
 
 </head> 
